# auto-auto

./: .gitignore  README.md  install.sh  main.py  plan.md  pyproject.toml  system-prompt.txt
.claude/: settings.json
.claude/skills/auto-auto/: SKILL.md
skill/auto-auto/: SKILL.md
skill/workflow-check/: SKILL.md
src/workflow_engine/: __main__.py  engine.py  hooks.py  server.py
templates/: build-ship.json  debug-fix.json  iterative-refinement.json  research-explore.json  top-down-decomposition.json
tests/: test_engine.py  test_full_scaffold.py  test_hooks.py  test_infinite_loop.py  test_loop.py  test_mcp_tools.py  test_tier1.py  test_verification.py
