[project]
name = "auto-auto"
version = "0.1.0"
description = "Automatic pipeline to generate automatic pipelines — a workflow state-machine MCP that guides AI agents through structured problem-solving workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_engine"]
